z-index fix

--- a/static/wordstyle.css
+++ b/static/wordstyle.css
@@ -12,6 +12,7 @@ body {
 nav {
   background-color: lightslategray;
   border: darkgray 1px solid;
+  z-index: -1;
 }
 
 nav h1 {
@@ -36,6 +37,7 @@ footer {
   position: relative;
   border: darkgray 1px solid;
   height: 30px;
+  z-index: -1;
 }
 
 footer a {
@@ -77,7 +79,6 @@ footer a {
   border: solid slategray 2px;
   background-color: white;
   overflow-y: scroll;
-  z-index: 3;
 }
 .modal-content {
   margin: auto;
